# adventOfCode

./: .gitignore  README.md  composer.json
2015/: README.md
2015-PHP-TDD/: .gitignore  composer.json  phpspec.yml
2016-Clojure/: .gitignore  project.clj
2018-Go/: .gitignore  main.go
2019-Kotlin/: .gitignore  aoc  build.sh
2020-Rust/: .gitignore
2021-TypeScript/: aoc  package-lock.json  package.json  run.ts  tsconfig.json
2023-Haskell/: .gitignore  aoc.cabal  aoc.hs
2023-Haskell/Day1/: Day1.hs  input.txt
2023-Haskell/Day10/: Day10.hs
2023-Haskell/Day13/: Day13.hs
2023-Haskell/Day14/: Day14.hs
2023-Haskell/Day15/: Day15.hs
2023-Haskell/Day16/: Day16.hs
2023-Haskell/Day18/: Day18.hs
2023-Haskell/Day19/: Day19.hs
2023-Haskell/Day2/: Day2.hs
2023-Haskell/Day22/: Day22.hs
2023-Haskell/Day23/: Day23.hs
2023-Haskell/Day3/: Day3.hs
2023-Haskell/Day5/: Day5.hs
2023-Haskell/app/: Grid.hs  Main.hs  Util.hs
2023-Haskell/app/Day1/: Day1.hs
2023-Haskell/app/Day10/: Day10.hs
2023-Haskell/app/Day11/: Day11.hs
2023-Haskell/app/Day12/: Day12.hs
2023-Haskell/app/Day13/: Day13.hs
2023-Haskell/app/Day14/: Day14.hs
2023-Haskell/app/Day15/: Day15.hs  input.txt
2023-Haskell/app/Day16/: Day16.hs  input.txt
2023-Haskell/app/Day17/: Day17.hs  input.txt
2023-Haskell/app/Day18/: Day18.hs  input.txt
2023-Haskell/app/Day19/: Day19.hs  input.txt
2023-Haskell/app/Day2/: Day2.hs  Game.hs
2023-Haskell/app/Day20/: Day20.hs  InputParser.hs  Machine.hs  input.txt
2023-Haskell/app/Day21/: Day21.hs  input.txt
2023-Haskell/app/Day22/: Day22.hs  input.txt
2023-Haskell/app/Day23/: Day23.hs
2023-Haskell/app/Day24/: Day24.hs
2023-Haskell/app/Day25/: Day25.hs
2023-Haskell/app/Day3/: Day3.hs
2023-Haskell/app/Day4/: Day4.hs
2023-Haskell/app/Day5/: Almanac.hs  Day5.hs  InputParser.hs  input.txt
2023-Haskell/app/Day6/: Day6.hs  input.txt
2023-Haskell/app/Day7/: Day7.hs  input.txt
2023-Haskell/app/Day8/: Day8.hs  input.txt
2023-Haskell/app/Day9/: Day9.hs  input.txt
2024-Ruby/: aoc.rb  aoc_day.rb  bootstrap.rb
2025-Lua/: .gitignore  (+1 more)
(+415 files in other folders)
