cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chris Emerson
maintainer:         git@chris.emerson.email

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
data-files:
    app/Day1/input.txt
    app/Day2/input.txt
    app/Day3/input.txt
    app/Day4/input.txt
    app/Day5/input.txt
    app/Day6/input.txt
    app/Day7/input.txt
    app/Day8/input.txt
    app/Day9/input.txt
    app/Day10/input.txt
    app/Day11/input.txt
    app/Day12/input.txt
    app/Day13/input.txt
    app/Day14/input.txt
    app/Day15/input.txt
    app/Day16/input.txt
    app/Day17/input.txt
    app/Day18/input.txt
    app/Day19/input.txt
    app/Day20/input.txt
    app/Day21/input.txt
    app/Day22/input.txt
    app/Day23/input.txt
    app/Day24/input.txt
    app/Day25/input.txt

executable aoc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        regex-pcre-builtin,
        split,
        text
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Day1.Day1
        Day2.Day2
        Day2.Game
        Day3.Day3
        Day4.Day4
        Day5.Day5
        Day6.Day6
        Day7.Day7
        Day8.Day8
        Day9.Day9
        Day10.Day10
        Day11.Day11
        Day12.Day12
        Day13.Day13
        Day14.Day14
        Day15.Day15
        Day16.Day16
        Day17.Day17
        Day18.Day18
        Day19.Day19
        Day20.Day20
        Day21.Day21
        Day22.Day22
        Day23.Day23
        Day24.Day24
        Day25.Day25
        Paths_aoc